<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/Home">

    <fragment
        android:id="@+id/Home"
        android:name="com.example.weatherforecast.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="id_favo"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.weatherforecast.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_navigation_favorite_to_favoriteDetails"
            app:destination="@id/Details" />
    </fragment>

    <fragment
        android:id="@+id/Alarm"
        android:name="com.example.weatherforecast.ui.alarm.AlarmFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherforecast.ui.map.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_mapsFragment_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_mapsFragment_to_navigation_home"
            app:destination="@id/Home" />
    </fragment>
    <fragment
        android:id="@+id/Details"
        android:name="com.example.weatherforecast.ui.favorite.details.FavoriteDetails"
        android:label="@string/details"
        tools:layout="@layout/favorite_details_fragment">
        <argument
            android:name="latLng"
            app:argType="com.google.android.gms.maps.model.LatLng" />
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_favoriteDetails_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>
    <fragment
        android:id="@+id/AboutUs"
        android:name="com.example.weatherforecast.ui.aboutUs.AboutUs"
        android:label="@string/aboutUs" />
</navigation>