<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".ui.settings.SettingsActivity"
    android:background="@color/backGround"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/rv_shape"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/settingsToolbar"
        android:layout_marginTop="@dimen/_20sdp"
        >





    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_8sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rv_shape"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardBackgroundColor="@color/card_color1"
            >

                <RadioGroup
                    android:id="@+id/settingsLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                      android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    >

                    <RadioButton

                        android:id="@+id/settingsLanguageEng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsEnglish"
                        />

                    <RadioButton
                        android:id="@+id/settingsLanguageAr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsArabic"
                        android:outlineSpotShadowColor="@color/black"
                        />

                </RadioGroup>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rv_shape"
            android:gravity="center"
            android:text="@string/settingsTemperature"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardBackgroundColor="@color/card_color1"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                >

                <RadioButton

                    android:id="@+id/settingsRBCelsius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsCelsius"
                     />

                <RadioButton
                    android:id="@+id/settingsRBKelvin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsKelvin"
                     />

                <RadioButton
                    android:id="@+id/settingsRBFahrenheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SettingsFahrenheit"
                    />

            </RadioGroup>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/_8sdp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rv_shape"
            android:gravity="center"
            android:text="@string/settingsMode"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardBackgroundColor="@color/card_color1"

            >

            <RadioGroup
                android:id="@+id/settingsModeRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"

                >

                <RadioButton

                    android:id="@+id/settingsDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modeDark"

                    />

                <RadioButton
                    android:id="@+id/settingsLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modeLight"

                    />

            </RadioGroup>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rv_shape"
            android:gravity="center"
            android:text="@string/settingsLocation"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardBackgroundColor="@color/card_color1"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                >

                <RadioButton

                    android:id="@+id/settingsRBGps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsGps"

                    />

                <RadioButton
                    android:id="@+id/settingsRBMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsMap"

                    />


            </RadioGroup>


        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </LinearLayout>


</RelativeLayout>