<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/backGround"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            >

            <TextView
                android:id="@+id/detailsTvTimeZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/_3sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/detailsCard1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_22sdp"
                app:cardElevation="@dimen/_12sdp"
                android:layout_below="@id/detailsTvTimeZone"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/card_shape"
                    >

                    <TextView
                        android:id="@+id/detailsCard1TempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_25ssp"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:id="@+id/detailsCard1TvTempNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailsCard1TempText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_45ssp"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:id="@+id/detailsCard1TvTempMeas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailsCard1TempText"
                        android:layout_toEndOf="@+id/detailsCard1TvTempNum"
                        android:text="ْ c"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailsCard1"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/custom_item_home_rv"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsRv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailsRv"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical"

                tools:listitem="@layout/custom_item_home_rv2" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_below="@+id/detailsRv2"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_22sdp"
                app:cardElevation="@dimen/_15sdp"
                app:cardBackgroundColor="@color/purple_500"

                android:layout_marginBottom="@dimen/_50sdp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/card_shape"
                    >

                    <ImageView
                        android:id="@+id/detailsCard2PressImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:src="@drawable/press" />
                    <TextView
                        android:id="@+id/detailsCard2PressTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:layout_below="@+id/detailsCard2PressImg"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        />
                    <TextView
                        android:id="@+id/detailsCard2PressTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:layout_below="@+id/detailsCard2PressTv1"
                        android:layout_marginTop="@dimen/_3sdp"
                        />

                    <ImageView
                        android:id="@+id/detailsCard2HumImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/rain" />
                    <TextView
                        android:id="@+id/detailsCard2HumTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:layout_below="@+id/detailsCard2HumImg"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:id="@+id/detailsCard2HumTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailsCard2HumTv1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/humidity" />

                    <ImageView
                        android:id="@+id/detailsCard2WindImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/detailsCard2WindTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailsCard2WindImg"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="50" />

                    <TextView
                        android:id="@+id/detailsCard2WindTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detailsCard2WindTv1"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/wind" />

                    <ImageView
                        android:id="@+id/detailsCard2cloudsImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_above="@+id/detailsCard2cloudsTv1"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/cloud"

                        />
                    <TextView
                        android:id="@+id/detailsCard2cloudsTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_alignParentStart="true"
                        android:layout_above="@+id/detailsCard2cloudsTv2"
                        android:layout_marginStart="@dimen/_6sdp"
                        />

                    <TextView
                        android:id="@+id/detailsCard2cloudsTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/clouds"
                        android:layout_marginBottom="@dimen/_20sdp"
                        />

                    <ImageView
                        android:id="@+id/detailsCard2uviImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_above="@+id/detailsCard2uviTv1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/uvi" />
                    <TextView
                        android:id="@+id/detailsCard2uviTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_above="@+id/detailsCard2uviTv2"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:id="@+id/detailsCard2uviTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/uvi"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_centerHorizontal="true"
                        />

                    <ImageView
                        android:id="@+id/detailsCard2visImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_above="@+id/detailsCard2visTv1"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:src="@drawable/vis" />

                    <TextView
                        android:id="@+id/detailsCard2visTv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/detailsCard2visTv2"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="50" />

                    <TextView
                        android:id="@+id/detailsCard2visTv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/visibility"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>